Fixed stretched images
- Fixed stretched images
- Added revised CV

--- a/src/App.css
+++ b/src/App.css
@@ -165,14 +165,15 @@ html, body {
     }
 
       .projectImage {
-        width: 100%;
+        width: auto;
         height: 100%;
         border-radius: 5px;
+        position: relative;
+        margin-right: 100%
       }
 
       .projectImageOverlay {
         background: url('/projectOverlay.svg');
-        background-repeat: no-repeat;
         background-size: cover;
         top: 0;
         right: 0;
@@ -200,8 +201,8 @@ html, body {
           margin-bottom: 1rem;
         }
 
-        .projectDivText {
-        }
+        /* .projectDivText {
+        } */
 
         .projectDivButtonsDiv {
           width: 100%;
@@ -215,8 +216,7 @@ html, body {
         .projectLiveDemoButton, .projectSourceCodeButton {
           border: 0;
           border-radius: 5px;
-          min-width: 120px;
-          width: max-content;
+          min-width: max-content;
           padding: 0.5rem 0.75rem;
           height: 2rem;
           font-family: inherit;
@@ -288,6 +288,6 @@ html, body {
             margin-right: auto;
           }
 
-          .projectSourceCodeButton {
-          }
+          /* .projectSourceCodeButton {
+          } */
 }
